infrastructure/k8s/github-review-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-review-service
  namespace: default
  labels:
    app: github-review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-review-service
  template:
    metadata:
      labels:
        app: github-review-service
      annotations:
        sidecar.istio.io/userVolumeMount: >-
          [{"name":"rendered-sds","mountPath":"/etc/istio/oauth2","readonly":true}]
    spec:
      containers:
      - name: github-review-service
        image: gabby.azurecr.io/github-review-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        readinessProbe:
          httpGet:
            path: /api/status
            port: http
        livenessProbe:
          httpGet:
            path: /api/status
            port: http
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "github-review-secrets-provider"
      - name: github-review-oauth2-sds-template
        configMap:
          name: github-review-oauth2-sds
      - name: rendered-sds
        emptyDir: {}
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: github-review-service
  namespace: default
spec:
  selector:
    app: github-review-service
  ports:
  - port: 80
    targetPort: 8000
    name: http
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: gh-review
  namespace: default
spec:
  selector:
    app: github-review-service
  ports:
  - port: 80
    targetPort: 8000
    name: http
  type: ClusterIP
