infrastructure/k8s/profile-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-service
  namespace: default
  labels:
    app: profile-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-service
  template:
    metadata:
      labels:
        app: profile-service
      annotations:
        sidecar.istio.io/userVolumeMount: >-
          [{"name":"rendered-sds","mountPath":"/etc/istio/oauth2","readonly":true}]
    spec:
      containers:
      - name: profile-service
        image: gabby.azurecr.io/profile-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "oauth2-secrets-provider"
      - name: profile-oauth2-sds-template
        configMap:
          name: profile-oauth2-sds
      - name: rendered-sds
        emptyDir: {}
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  namespace: default
spec:
  selector:
    app: profile-service
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
