infrastructure/k8s/profile-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-ui
  namespace: default
  labels:
    app: profile-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-ui
  template:
    metadata:
      labels:
        app: profile-ui
    spec:
      containers:
      - name: profile-ui
        image: gabby.azurecr.io/profile-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "oauth2-secrets-provider"
      nodeSelector:
        kubernetes.io/arch: amd64
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: profile-ui
  namespace: default
spec:
  selector:
    app: profile-ui
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
